ansible/roles/deploy_app/files/influxdb-app.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: influxdb-balanced
  labels:
    name: influxdb-balanced
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb-balanced
  namespace: influxdb-balanced
  labels:
    app: influxdb-balanced
spec:
  replicas: 2
  selector:
    matchLabels:
      app: influxdb-balanced
  template:
    metadata:
      labels:
        app: influxdb-balanced
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - influxdb-balanced
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: influxdb-balanced
        image: influxdb
        ports:
        - containerPort: 8086
        readinessProbe:
          httpGet:
            path: /
            port: 8086
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
        volumeMounts:
        - name: site-pvc
          mountPath: /var/lib/influxdb
      volumes:
      - name: site-pvc
        persistentVolumeClaim:
          claimName: nfs-pvc
---
apiVersion: v1
kind: Service
metadata:
    name: balanced-service
    namespace: influxdb-balanced
spec:
    selector:
      app: influxdb-balanced
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8086
    type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: balanced-ingress
  namespace: influxdb-balanced
  labels:
    app: influxdb-balanced
  annotations:
    haproxy.org/path-rewrite: /$1 # Importante que sea path-rewrite o si no, no se va a ver la pagina
spec:
  rules:
  - host: <dnshere>
    http:
      paths:
      - path: /
        pathType: "Prefix"
        backend:
          service:
            name: balanced-service
            port:
              number: 80
